Modificando tela de gerar relatórios